[Java] Set `sourceCompatibility=17`.