@@ -171,6 +171,7 @@ subprojects {
         toolchain {
             languageVersion = JavaLanguageVersion.of(buildJavaVersion)
         }
+        sourceCompatibility = JavaVersion.VERSION_17
     }
 
     tasks.withType(JavaCompile).configureEach {
@@ -195,7 +196,6 @@ subprojects {
         useJUnitPlatform()
 
         if (buildJavaVersion >= 9) {
-            jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED')
             jvmArgs('--add-opens', 'java.base/java.util.zip=ALL-UNNAMED')
         }
 
@@ -259,9 +259,7 @@ subprojects {
         options.encoding = 'UTF-8'
         options.docEncoding = 'UTF-8'
         options.charSet = 'UTF-8'
-        if (JavaVersion.current().isJava10Compatible()) {
-            options.addBooleanOption 'html5', true
-        }
+        options.addBooleanOption('html5', true)
         options.addStringOption('Xdoclint:all,-missing', '-quiet')
     }
 
